--- a/_includes/header.html
+++ b/_includes/header.html
@@ -39,7 +39,7 @@
 
           {% if include.type == "post" %}
             <!-- Temporary commented this out.  See if I can make a more elegant modification later. #TODO #1 -->
-            <!--<span class="post-meta">Posted on {{ page.date | date: date_format }}</span>-->
+            <span class="post-meta">Posted on {{ page.date | date: date_format }}</span>
             {% if page.last-updated %}
               <span class="post-meta">
                 <span class="d-none d-md-inline middot">&middot;</span>
